--- a/src/pages/Admin/components/BaseCombobox/components/Selected/Selected.css
+++ b/src/pages/Admin/components/BaseCombobox/components/Selected/Selected.css
@@ -13,8 +13,6 @@
   padding: var(--padding);
   height: 100%;
 
-  cursor: default;
-
   > .item {
     --border-color: var(--pal-color-a-l5);
 
@@ -32,6 +30,7 @@
     border-radius: var(--pal-size-3xs);
     background-color: var(--pal-color-white);
     overflow: hidden;
+    cursor: default;
 
     > p {
       padding-left: var(--pal-size-xs);
@@ -63,6 +62,12 @@
 
     &:not(:has(button)) > p {
       padding-right: var(--pal-size-xs);
+    }
+
+    &:first-child {
+      max-width: calc(
+        100cqw - var(--height) - var(--padding) * 2 - var(--line-thickness)
+      );
     }
   }
 }
